brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Interview_Meeting_Link__c</fullName>
    <description>This field is used to store the interview meeting link.</description>
    <inlineHelpText>Please provide the interview meeting link here.</inlineHelpText>
    <label>Interview Meeting Link</label>
    <type>Url</type>
</CustomField>