brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Mode__c.field-meta.xml
<CustomField>
    <fullName>Interview_Mode__c</fullName>
    <label>Interview Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>