brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Month__c.field-meta.xml
<CustomField>
    <fullName>Interview_Month__c</fullName>
    <formula>DATE(YEAR(Date_of_Interview__c), MONTH(Date_of_Interview__c), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Month</label>
    <type>Date</type>
</CustomField>