brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interview_Notes__c</fullName>
    <inlineHelpText>Add preparation notes, client instructions, interview format, or topics the candidate should prepare.</inlineHelpText>
    <label>Interview Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>