brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Interview_Outcome__c</fullName>
    <label>Interview Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interview_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Moved to Next Round</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Ghosted</fullName>
            </value>
            <value>
                <fullName>Reference Check</fullName>
            </value>
            <value>
                <fullName>Offer Received</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>