brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Questions__c.field-meta.xml
<CustomField>
    <fullName>Interview_Questions__c</fullName>
    <label>Interview Questions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>