brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Recording_Key__c.field-meta.xml
<CustomField>
    <fullName>Interview_Recording_Key__c</fullName>
    <label>Interview Recording Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>