brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Recording_Link__c.field-meta.xml
<CustomField>
    <fullName>Interview_Recording_Link__c</fullName>
    <label>Interview Recording Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>