brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Source__c.field-meta.xml
<CustomField>
    <fullName>Interview_Source__c</fullName>
    <description>Identifies how this interview was generated. B2B Requirement = from job submission flow. Used to separate B2B interviews from other candidate marketing interviews.</description>
    <inlineHelpText>Auto-set to B2B Requirement when created via Create Interview flow. Allows filtering B2B interviews from other interview types in reports.</inlineHelpText>
    <label>Interview Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B Requirement</fullName>
            </value>
            <value>
                <fullName>Candidate Marketing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>