brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Status__c.field-meta.xml
<CustomField>
    <fullName>Interview_Status__c</fullName>
    <label>Interview Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Ghosted</fullName>
                <isActive>false</isActive>
                <label>Ghosted</label>
            </value>
            <value>
                <fullName>Loop Round</fullName>
                <isActive>false</isActive>
                <label>Loop Round</label>
            </value>
            <value>
                <fullName>Moved to Next Round</fullName>
                <isActive>false</isActive>
                <label>Moved to Next Round</label>
            </value>
            <value>
                <fullName>Offer Received</fullName>
                <isActive>false</isActive>
                <label>Offer Received</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>