brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Support_provided__c.field-meta.xml
<CustomField>
    <fullName>Interview_Support_provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Support provided?</label>
    <type>Checkbox</type>
</CustomField>