brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Interview_Time_Zone__c</fullName>
    <label>Interview Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ET (Eastern Time)</fullName>
            </value>
            <value>
                <fullName>CT (Central Time)</fullName>
            </value>
            <value>
                <fullName>MT (Mountain Time)</fullName>
            </value>
            <value>
                <fullName>PT (Pacific Time)</fullName>
            </value>
            <value>
                <fullName>AT (Alaska Time)</fullName>
            </value>
            <value>
                <fullName>HT (Hawaii Time)</fullName>
            </value>
            <value>
                <fullName>UTC (Coordinated Universal Time)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>