brain/sources/prod-metadata/objects/Interview__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screening Round</fullName>
            </value>
            <value>
                <fullName>Technical Round</fullName>
            </value>
            <value>
                <fullName>HR Round</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>