brain/sources/prod-metadata/objects/Interview__c/fields/Interviewer_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_s_Email__c</fullName>
    <label>Interviewer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>