brain/sources/prod-metadata/objects/Interview__c/fields/Interviewer_Severity_Cj__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Severity_Cj__c</fullName>
    <label>Interviewer Severity Cj</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>