brain/sources/prod-metadata/objects/Interview__c/fields/Is_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Month__c</fullName>
    <formula>MONTH(Date_of_Interview__c ) = MONTH(TODAY()) &amp;&amp;
YEAR(Date_of_Interview__c ) = YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Current_Month</label>
    <type>Checkbox</type>
</CustomField>