brain/sources/prod-metadata/objects/Interview__c/fields/Is_Lead_Populated__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Populated__c</fullName>
    <formula>NOT(ISBLANK(Lead__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lead Populated</label>
    <type>Checkbox</type>
</CustomField>