brain/sources/prod-metadata/objects/Interview__c/fields/Is_Loop_Round__c.field-meta.xml
<CustomField>
    <fullName>Is_Loop_Round__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox create for loop round comes up.</description>
    <label>Is Loop Round?</label>
    <type>Checkbox</type>
</CustomField>