brain/sources/prod-metadata/objects/Interview__c/fields/IsInterview__c.field-meta.xml
<CustomField>
    <fullName>IsInterview__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsInterview</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>