brain/sources/prod-metadata/objects/Interview__c/fields/IST_End_Time__c.field-meta.xml
<CustomField>
    <fullName>IST_End_Time__c</fullName>
    <label>IST End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>