brain/sources/prod-metadata/objects/Interview__c/fields/IST_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>IST_Start_DateTime__c</fullName>
    <formula>DATETIMEVALUE(
TEXT(Date_of_Interview__c) &amp; &apos; &apos; &amp;
TEXT(IF(CONTAINS(IST_Start_Time__c,&apos;PM&apos;),
IF(VALUE(MID(IST_Start_Time__c,1,FIND(&apos;:&apos;,IST_Start_Time__c)-1))=12,12,
VALUE(MID(IST_Start_Time__c,1,FIND(&apos;:&apos;,IST_Start_Time__c)-1))+12),
IF(VALUE(MID(IST_Start_Time__c,1,FIND(&apos;:&apos;,IST_Start_Time__c)-1))=12,0,
VALUE(MID(IST_Start_Time__c,1,FIND(&apos;:&apos;,IST_Start_Time__c)-1))))) &amp; &apos;:&apos; &amp;
MID(IST_Start_Time__c,FIND(&apos;:&apos;,IST_Start_Time__c)+1,2) &amp; &apos;:00&apos;
) - (5.5/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IST Start DateTime</label>
    <type>DateTime</type>
</CustomField>