brain/sources/prod-metadata/objects/Interview__c/fields/IST_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>IST_Start_Time__c</fullName>
    <label>IST Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>