brain/sources/prod-metadata/objects/Interview__c/fields/IsValidated__c.field-meta.xml
<CustomField>
    <fullName>IsValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Ghosted Validation</label>
    <type>Checkbox</type>
</CustomField>