brain/sources/prod-metadata/objects/Interview__c/fields/JD_Link__c.field-meta.xml
<CustomField>
    <fullName>JD_Link__c</fullName>
    <label>JD Link(Do Not Use)</label>
    <type>Url</type>
</CustomField>