brain/sources/prod-metadata/objects/Interview__c/fields/JD_Link_url__c.field-meta.xml
<CustomField>
    <fullName>JD_Link_url__c</fullName>
    <label>JD Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>