brain/sources/prod-metadata/objects/Interview__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>