brain/sources/prod-metadata/objects/Interview__c/fields/Job_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Job_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this interview to the Job Requirement it came from. Auto-filled from Job Submission when interview is created via Create Interview flow.</description>
    <inlineHelpText>Auto-populated from Job Submission when using Create Interview flow. Required for B2B Requirement interviews per validation rule.</inlineHelpText>
    <label>Job Requirement</label>
    <referenceTo>Job_Requirement__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>