brain/sources/prod-metadata/objects/Interview__c/fields/Kalman_Gain_K__c.field-meta.xml
<CustomField>
    <fullName>Kalman_Gain_K__c</fullName>
    <label>Kalman Gain K</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>