brain/sources/prod-metadata/objects/Interview__c/fields/Kalman_P_JSON__c.field-meta.xml
<CustomField>
    <fullName>Kalman_P_JSON__c</fullName>
    <label>Kalman P JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>