brain/sources/prod-metadata/objects/Interview__c/fields/Kalman_P_Posterior__c.field-meta.xml
<CustomField>
    <fullName>Kalman_P_Posterior__c</fullName>
    <label>Kalman P Posterior</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>