brain/sources/prod-metadata/objects/Interview__c/fields/Kalman_P_Prior__c.field-meta.xml
<CustomField>
    <fullName>Kalman_P_Prior__c</fullName>
    <label>Kalman P Prior</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>