brain/sources/prod-metadata/objects/Interview__c/fields/Kalman_R_Adaptive__c.field-meta.xml
<CustomField>
    <fullName>Kalman_R_Adaptive__c</fullName>
    <label>Kalman R Adaptive</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>