brain/sources/prod-metadata/objects/Interview__c/fields/L10_Score_After__c.field-meta.xml
<CustomField>
    <fullName>L10_Score_After__c</fullName>
    <label>L10 Score After</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>