brain/sources/prod-metadata/objects/Interview__c/fields/Lambda_Trust__c.field-meta.xml
<CustomField>
    <fullName>Lambda_Trust__c</fullName>
    <label>Lambda Trust</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>