brain/sources/prod-metadata/objects/Interview__c/fields/Last_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_Date__c</fullName>
    <label>Last Follow-Up Date</label>
    <type>DateTime</type>
</CustomField>