brain/sources/prod-metadata/objects/Interview__c/fields/Last_Reminder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Sent_Date__c</fullName>
    <label>Last Reminder Sent Date</label>
    <type>DateTime</type>
</CustomField>