brain/sources/prod-metadata/objects/Interview__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked Lead record for website applicants. Used when Interview is created from a Job Submission that has a Lead (not Candidate). Enables interview tracking for website applicants.</description>
    <inlineHelpText>Auto-populated by Flow 4 (Create Interview) from JS.Lead__c. Either Candidate or Lead must be filled. When Lead is later converted to Person Account, all linked Interviews migrate automatically.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>