brain/sources/prod-metadata/objects/Interview__c/fields/Manager_Thread_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Manager_Thread_Timestamp__c</fullName>
    <label>Manager Thread Timestamp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>