brain/sources/prod-metadata/objects/Interview__c/fields/Manual_Follow_Up_Count__c.field-meta.xml
<CustomField>
    <fullName>Manual_Follow_Up_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Manual Follow-Up Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>