brain/sources/prod-metadata/objects/Interview__c/fields/MFRM_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>MFRM_Multiplier__c</fullName>
    <label>MFRM Multiplier</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>