brain/sources/prod-metadata/objects/Interview__c/fields/MFRM_Severity_Cj__c.field-meta.xml
<CustomField>
    <fullName>MFRM_Severity_Cj__c</fullName>
    <label>MFRM Severity Cj</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>