brain/sources/prod-metadata/objects/Interview__c/fields/Momentum_EMA__c.field-meta.xml
<CustomField>
    <fullName>Momentum_EMA__c</fullName>
    <label>Momentum EMA</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>