brain/sources/prod-metadata/objects/Interview__c/fields/Momentum_Factor_Fm__c.field-meta.xml
<CustomField>
    <fullName>Momentum_Factor_Fm__c</fullName>
    <label>Momentum Factor Fm</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>