brain/sources/prod-metadata/objects/Interview__c/fields/Net_Delta_Backend__c.field-meta.xml
<CustomField>
    <fullName>Net_Delta_Backend__c</fullName>
    <label>Net Delta Backend</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>