brain/sources/prod-metadata/objects/Interview__c/fields/Net_Delta_Frontend__c.field-meta.xml
<CustomField>
    <fullName>Net_Delta_Frontend__c</fullName>
    <label>Net Delta Frontend</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>