brain/sources/prod-metadata/objects/Interview__c/fields/Offer_Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Letter_Date__c</fullName>
    <label>Offer Letter Date</label>
    <type>Date</type>
</CustomField>