brain/sources/prod-metadata/objects/Interview__c/fields/Plasticity_Pi__c.field-meta.xml
<CustomField>
    <fullName>Plasticity_Pi__c</fullName>
    <label>Plasticity Pi</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>