brain/sources/prod-metadata/objects/Interview__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>