brain/sources/prod-metadata/objects/Interview__c/fields/Preferred_Support_Person__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Support_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Support Person</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>