brain/sources/prod-metadata/objects/Interview__c/fields/Previous_Support_Person__c.field-meta.xml
<CustomField>
    <fullName>Previous_Support_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Support Person</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>Interviews (Previous Support Person)</relationshipLabel>
    <relationshipName>Interviews1</relationshipName>
    <type>Lookup</type>
</CustomField>