brain/sources/prod-metadata/objects/Interview__c/fields/Protective_Dampening_Rho__c.field-meta.xml
<CustomField>
    <fullName>Protective_Dampening_Rho__c</fullName>
    <label>Protective Dampening Rho</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>