brain/sources/prod-metadata/objects/Interview__c/fields/Reassigned_Due_To_Extension__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Due_To_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassigned Due To Extension</label>
    <type>Checkbox</type>
</CustomField>