brain/sources/prod-metadata/objects/Interview__c/fields/Reassignment_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassignment Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>