brain/sources/prod-metadata/objects/Interview__c/fields/Reassignment_Initiated_On__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Initiated_On__c</fullName>
    <label>Reassignment Initiated On</label>
    <type>DateTime</type>
</CustomField>