brain/sources/prod-metadata/objects/Interview__c/fields/Reassignment_Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Reason_Comment__c</fullName>
    <label>Reassignment Reason Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>