brain/sources/prod-metadata/objects/Interview__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiter</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>