brain/sources/prod-metadata/objects/Interview__c/fields/Recruiter_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Name_formula__c</fullName>
    <formula>Recruiter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recruiter Name</label>
    <type>Text</type>
</CustomField>