brain/sources/prod-metadata/objects/Interview__c/fields/Recruiter_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_s_Email__c</fullName>
    <label>Recruiter&apos;s Email (Company)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>