brain/sources/prod-metadata/objects/Interview__c/fields/Ref_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Ref_2_Email__c</fullName>
    <label>Ref 2 Email</label>
    <type>Email</type>
</CustomField>