brain/sources/prod-metadata/objects/Interview__c/fields/Ref_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ref_2_Phone__c</fullName>
    <label>Ref 2 Phone</label>
    <type>Phone</type>
</CustomField>