brain/sources/prod-metadata/objects/Interview__c/fields/Ref_3_Notified__c.field-meta.xml
<CustomField>
    <fullName>Ref_3_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Backend-only. Set true by the Interview_Notify_Reference_Contacts flow after Ref 3 has been emailed that they are listed as a reference. Prevents duplicate notices. Not added to any page layout.</description>
    <label>Ref 3 Notified</label>
    <type>Checkbox</type>
</CustomField>