brain/sources/prod-metadata/objects/Interview__c/fields/Ref_3_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ref_3_Phone__c</fullName>
    <label>Ref 3 Phone</label>
    <type>Phone</type>
</CustomField>