brain/sources/prod-metadata/objects/Interview__c/fields/Ref_4_Email__c.field-meta.xml
<CustomField>
    <fullName>Ref_4_Email__c</fullName>
    <label>Ref 4 Email</label>
    <type>Email</type>
</CustomField>