brain/sources/prod-metadata/objects/Interview__c/fields/Ref_4_Name__c.field-meta.xml
<CustomField>
    <fullName>Ref_4_Name__c</fullName>
    <label>Ref 4 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>